{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 150,
  "lineage": "e9d01910-2ef6-31cd-3d6e-dc65668c9d0c",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03ed1381c73a5660e",
            "arn": "arn:aws:ec2:us-west-1:381492223890:instance/i-063a788858105b228",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-063a788858105b228",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "lab_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01144273474750473",
            "private_dns": "ip-10-1-0-109.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.109",
            "public_ip": "54.215.247.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0694d1ed879e75383",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-00e7f0d27cf98e41f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02522fd2b39d61e3d",
            "tags": {
              "Name": "Bastion_Host"
            },
            "tags_all": {
              "Name": "Bastion_Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00e7f0d27cf98e41f"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.lab_key",
            "module.securitygroup.aws_security_group.lab_security_group",
            "module.vpc.aws_subnet.lab-public-subnets",
            "module.vpc.aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03ed1381c73a5660e",
            "arn": "arn:aws:ec2:us-west-1:381492223890:instance/i-03d37a483b966b1c0",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03d37a483b966b1c0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "lab_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00eb2d600999323cc",
            "private_dns": "ip-10-1-2-59.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01c27a46fdb22bbdb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-00e7f0d27cf98e41f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-005fe4a04759fdeb0",
            "tags": {
              "Name": "myprivate_instance"
            },
            "tags_all": {
              "Name": "myprivate_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00e7f0d27cf98e41f"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.lab_key",
            "module.securitygroup.aws_security_group.lab_security_group",
            "module.vpc.aws_subnet.lab-private-subnets",
            "module.vpc.aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lab_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:381492223890:security-group/sg-00e7f0d27cf98e41f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e7f0d27cf98e41f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240730153232378200000001",
            "name_prefix": "terraform-",
            "owner_id": "381492223890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "var.sg_name"
            },
            "tags_all": {
              "Name": "var.sg_name"
            },
            "timeouts": null,
            "vpc_id": "vpc-04095c8eccb6968ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "lab_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a01e8a009564ecff",
            "arn": "arn:aws:ec2:us-west-1:381492223890:elastic-ip/eipalloc-0a01e8a009564ecff",
            "association_id": "eipassoc-0cf04a16656b53094",
            "domain": "vpc",
            "id": "eipalloc-0a01e8a009564ecff",
            "network_border_group": "us-west-1",
            "network_interface": "eni-06c520433c7412a06",
            "private_dns": "ip-10-1-0-237.us-west-1.compute.internal",
            "private_ip": "10.1.0.237",
            "public_dns": "ec2-52-9-64-41.us-west-1.compute.amazonaws.com",
            "public_ip": "52.9.64.41",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT-GW_EIP"
            },
            "tags_all": {
              "Name": "NAT-GW_EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lab-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:381492223890:internet-gateway/igw-0936882bfeb8020d1",
            "id": "igw-0936882bfeb8020d1",
            "owner_id": "381492223890",
            "tags": {
              "Name": "Test-IGW"
            },
            "tags_all": {
              "Name": "Test-IGW"
            },
            "vpc_id": "vpc-04095c8eccb6968ef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "lab_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a01e8a009564ecff",
            "association_id": "eipassoc-0cf04a16656b53094",
            "connectivity_type": "public",
            "id": "nat-07219c4f670fe93ae",
            "network_interface_id": "eni-06c520433c7412a06",
            "private_ip": "10.1.0.237",
            "public_ip": "52.9.64.41",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02522fd2b39d61e3d",
            "tags": {
              "Name": "NAT-GW"
            },
            "tags_all": {
              "Name": "NAT-GW"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.lab_nat_eip",
            "module.vpc.aws_subnet.lab-public-subnets",
            "module.vpc.aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lab-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:381492223890:route-table/rtb-0491f8fdafd30bbd8",
            "id": "rtb-0491f8fdafd30bbd8",
            "owner_id": "381492223890",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0936882bfeb8020d1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Route-Table"
            },
            "tags_all": {
              "Name": "Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04095c8eccb6968ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.lab-igw",
            "module.vpc.aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:381492223890:route-table/rtb-03f916810515465a0",
            "id": "rtb-03f916810515465a0",
            "owner_id": "381492223890",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07219c4f670fe93ae",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-Route-Table"
            },
            "tags_all": {
              "Name": "Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04095c8eccb6968ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.lab_nat_eip",
            "module.vpc.aws_nat_gateway.lab_nat_gateway",
            "module.vpc.aws_subnet.lab-public-subnets",
            "module.vpc.aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lab-public-subnet-nat-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eedc9ba7f96122a7",
            "route_table_id": "rtb-0491f8fdafd30bbd8",
            "subnet_id": "subnet-02522fd2b39d61e3d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.lab-igw",
            "module.vpc.aws_route_table.lab-public-route-table",
            "module.vpc.aws_subnet.lab-public-subnets",
            "module.vpc.aws_vpc.lab-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d01f780704f129d",
            "route_table_id": "rtb-0491f8fdafd30bbd8",
            "subnet_id": "subnet-021f9aae739b80f20"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.lab-igw",
            "module.vpc.aws_route_table.lab-public-route-table",
            "module.vpc.aws_subnet.lab-public-subnets",
            "module.vpc.aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c6f4cb6ed125a66",
            "route_table_id": "rtb-03f916810515465a0",
            "subnet_id": "subnet-005fe4a04759fdeb0"
          },
          "dependencies": [
            "module.vpc.aws_eip.lab_nat_eip",
            "module.vpc.aws_nat_gateway.lab_nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.lab-private-subnets",
            "module.vpc.aws_subnet.lab-public-subnets",
            "module.vpc.aws_vpc.lab-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e0b09308fd8458d",
            "route_table_id": "rtb-03f916810515465a0",
            "subnet_id": "subnet-0ad9cb7fe4c5a597d"
          },
          "dependencies": [
            "module.vpc.aws_eip.lab_nat_eip",
            "module.vpc.aws_nat_gateway.lab_nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.lab-private-subnets",
            "module.vpc.aws_subnet.lab-public-subnets",
            "module.vpc.aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lab-private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:381492223890:subnet/subnet-005fe4a04759fdeb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005fe4a04759fdeb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492223890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet-ZA"
            },
            "tags_all": {
              "Name": "Private-Subnet-ZA"
            },
            "vpc_id": "vpc-04095c8eccb6968ef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.lab-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:381492223890:subnet/subnet-0ad9cb7fe4c5a597d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad9cb7fe4c5a597d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492223890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet-ZB"
            },
            "tags_all": {
              "Name": "Private-Subnet-ZB"
            },
            "vpc_id": "vpc-04095c8eccb6968ef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lab-public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:381492223890:subnet/subnet-02522fd2b39d61e3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02522fd2b39d61e3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492223890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-ZA"
            },
            "tags_all": {
              "Name": "Public-Subnet-ZA"
            },
            "vpc_id": "vpc-04095c8eccb6968ef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.lab-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:381492223890:subnet/subnet-021f9aae739b80f20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021f9aae739b80f20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492223890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-ZB"
            },
            "tags_all": {
              "Name": "Public-Subnet-ZB"
            },
            "vpc_id": "vpc-04095c8eccb6968ef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:381492223890:vpc/vpc-04095c8eccb6968ef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0466ee6f672cd05c7",
            "default_route_table_id": "rtb-090ab4c2bb9e9aa42",
            "default_security_group_id": "sg-0bc5b6284e845c0b9",
            "dhcp_options_id": "dopt-099fd65a3e34f6fde",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04095c8eccb6968ef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-090ab4c2bb9e9aa42",
            "owner_id": "381492223890",
            "tags": {
              "Name": "Test-vpc"
            },
            "tags_all": {
              "Name": "Test-vpc"
            }
          }
        }
      ]
    }
  ]
}